5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2569.log
== TEST (2019-06-11 11:12:35) 
-- CODE:
from numpy import *

x = array(eval(input("Vetor: ")))
m = sum(x)/size(x)
n = size(x)
d = 0

for i in range(size(x)):
	d = d + ((x[i] - m)**2)/ (n - 1)
print(round((d**(1/2),3))
	


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:12:40) 
-- CODE:
from numpy import *

x = array(eval(input("Vetor: ")))
m = sum(x)/size(x)
n = size(x)
d = 0

for i in range(size(x)):
	d = d + ((x[i] - m)**2)/ (n - 1)
print(round(d**(1/2),3))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:12:59) 
-- CODE:
from numpy import *

x = array(eval(input("Vetor: ")))
m = sum(x)/size(x)
n = size(x)
d = 0

for i in range(size(x)):
	d = d + ((x[i] - m)**2)/ (n - 1)
print(round(d**(1/2),3))
	


-- EXECUTION TIME:
0.995088
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
